# DarkLight_CoverCalibrator

./: .gitignore  LICENSE.md  README.md  commit_message.txt
.github/: CODEOWNERS.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: main.md  pull_request.yml
.github/workflows/: arduino.yml
ascom/: DarkLight_App_Setup.msi  README.md
dlc_firmware/: README.md  dlc_firmware.ino
indi/: README.md
indi/indi-dlc-src/: CMakeLists.txt  config.h.cmake  darklight_covercalibrator.cpp  darklight_covercalibrator.h  indi_darklight_covercalibrator.xml.cmake
